fixed spacing between the nav elements to make it more spacious

--- a/assets/css/sheet.css
+++ b/assets/css/sheet.css
@@ -21,3 +21,8 @@ body {
     display: flex;
     justify-content: space-around
 }
+
+nav {
+    display:flex;
+    justify-content: space-evenly;
+}
